--- a/style.css
+++ b/style.css
@@ -1,7 +1,43 @@
-div{
-    background-color: red;
-    color: white;
-    font-size: 32px;
-    text-align: center;
-    width: bold;
+*{
+    box-sizing: border-box;
+}
+
+.div1_container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30%;
+    margin-right: 30%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+
+    background-color: pink;
+    border: 5px solid blue;
+}
+
+.div2_container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 28%;
+    margin-right: 28%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    background-color: aqua;
+    border: 5px solid purple;
+}
+
+.div3_container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 50%;
+    margin-right: 30%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+
+    background-color: chocolate;
+    border: 5px solid brown;
 }
